--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 </head>
 <body>
     <h1>Rap Names API</h1>
-    <input type="text">
-    <button>The Man needs a name</button>
-    <h2>Birth Name:</h2>
-
-<script src = 'js/main.js'></script>
+    <p>Please use localhost:8000/api/rapper-name</p>
 </body>
 </html>
